@@ -9,47 +9,36 @@
 
 package org.elasticsearch.test.apmintegration;
 
-import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
-import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
-import org.elasticsearch.common.settings.ClusterSettings;
-import org.elasticsearch.common.settings.IndexScopedSettings;
-import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.settings.SettingsFilter;
 import org.elasticsearch.features.NodeFeature;
 import org.elasticsearch.plugins.ActionPlugin;
 import org.elasticsearch.plugins.Plugin;
-import org.elasticsearch.rest.RestController;
 import org.elasticsearch.rest.RestHandler;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 
 public class ApmIntegrationPlugin extends Plugin implements ActionPlugin {
     private final TestApmIntegrationRestHandler testApmIntegrationRestHandler = new TestApmIntegrationRestHandler();
+    private final FlushTelemetryRestHandler flushTelemetryRestHandler = new FlushTelemetryRestHandler();
 
     @Override
     public List<RestHandler> getRestHandlers(
-        final Settings settings,
-        NamedWriteableRegistry namedWriteableRegistry,
-        final RestController restController,
-        final ClusterSettings clusterSettings,
-        final IndexScopedSettings indexScopedSettings,
-        final SettingsFilter settingsFilter,
-        final IndexNameExpressionResolver indexNameExpressionResolver,
+        RestHandlersServices restHandlersServices,
         final Supplier<DiscoveryNodes> nodesInCluster,
         Predicate<NodeFeature> clusterSupportsFeature
     ) {
-        return Collections.singletonList(testApmIntegrationRestHandler);
+        return List.of(testApmIntegrationRestHandler, flushTelemetryRestHandler);
     }
 
     @Override
     public Collection<?> createComponents(PluginServices services) {
-        TestMeterUsages testMeterUsages = new TestMeterUsages(services.telemetryProvider().getMeterRegistry());
+        var telemetryProvider = services.telemetryProvider();
+        TestMeterUsages testMeterUsages = new TestMeterUsages(telemetryProvider.getMeterRegistry());
         testApmIntegrationRestHandler.setTestMeterUsages(testMeterUsages);
+        flushTelemetryRestHandler.setTelemetryProvider(telemetryProvider);
         return super.createComponents(services);
     }
 }
