@@ -17,9 +17,8 @@ import org.elasticsearch.compute.data.BooleanBlock;
 import org.elasticsearch.compute.data.ElementType;
 import org.elasticsearch.compute.data.Page;
 import org.elasticsearch.compute.data.ToMask;
+import org.elasticsearch.compute.expression.ExpressionEvaluator;
 import org.elasticsearch.compute.operator.DriverContext;
-import org.elasticsearch.compute.operator.EvalOperator;
-import org.elasticsearch.compute.operator.EvalOperator.ExpressionEvaluator;
 import org.elasticsearch.compute.operator.Warnings;
 import org.elasticsearch.core.Releasable;
 import org.elasticsearch.core.Releasables;
@@ -32,6 +31,9 @@ import org.elasticsearch.xpack.esql.core.tree.NodeInfo;
 import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.core.type.DataType;
 import org.elasticsearch.xpack.esql.expression.function.Example;
+import org.elasticsearch.xpack.esql.expression.function.FunctionAppliesTo;
+import org.elasticsearch.xpack.esql.expression.function.FunctionAppliesToLifecycle;
+import org.elasticsearch.xpack.esql.expression.function.FunctionDefinition;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
 import org.elasticsearch.xpack.esql.expression.function.scalar.EsqlScalarFunction;
@@ -46,13 +48,14 @@ import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import static org.elasticsearch.common.logging.LoggerMessageFormat.format;
-import static org.elasticsearch.xpack.esql.core.type.DataType.AGGREGATE_METRIC_DOUBLE;
-import static org.elasticsearch.xpack.esql.core.type.DataType.HISTOGRAM;
 import static org.elasticsearch.xpack.esql.core.type.DataType.NULL;
-import static org.elasticsearch.xpack.esql.core.type.DataType.TDIGEST;
 
 public final class Case extends EsqlScalarFunction {
     public static final NamedWriteableRegistry.Entry ENTRY = new NamedWriteableRegistry.Entry(Expression.class, "Case", Case::new);
+    public static final FunctionDefinition DEFINITION = FunctionDefinition.def(Case.class)
+        .unaryVariadic(Case::new)
+        .capabilities("flattened")
+        .name("case");
 
     record Condition(Expression condition, Expression value) {
         ConditionEvaluatorSupplier toEvaluator(ToEvaluator toEvaluator) {
@@ -65,29 +68,40 @@ public final class Case extends EsqlScalarFunction {
     private DataType dataType;
 
     @FunctionInfo(
+        appliesTo = { @FunctionAppliesTo(lifeCycle = FunctionAppliesToLifecycle.GA) },
         returnType = {
+            "aggregate_metric_double",
             "boolean",
             "cartesian_point",
             "cartesian_shape",
             "date",
             "date_nanos",
+            "date_range",
             "dense_vector",
             "double",
+            "double_range",
+            "flattened",
             "geo_point",
             "geo_shape",
             "geohash",
             "geotile",
             "geohex",
+            "histogram",
             "integer",
             "ip",
             "keyword",
             "long",
+            "tdigest",
             "unsigned_long",
             "version",
             "exponential_histogram" },
+        // Identity-return overloads omitted: the return type follows the first non-null value
+        // branch, so a fixed $N return reference cannot express it.
+        briefSummary = "Returns the value for the first condition that evaluates to true.",
         description = """
             Accepts pairs of conditions and values. The function returns the value that
-            belongs to the first condition that evaluates to `true`.
+            belongs to the first condition that evaluates to `true`. Both the conditions
+            and the returned values can be any expression, including column references.
 
             If the number of arguments is odd, the last argument is the default value which
             is returned when no condition matches. If the number of arguments is even, and
@@ -103,6 +117,11 @@ public final class Case extends EsqlScalarFunction {
                 description = "Calculate an hourly error rate as a percentage of the total number of log messages:",
                 file = "conditional",
                 tag = "docsCaseHourlyErrorRate"
+            ),
+            @Example(
+                description = "Extract error messages and count distinct ones using a column expression:",
+                file = "conditional",
+                tag = "docsCaseColumnExpression"
             ) }
     )
     public Case(
@@ -111,28 +130,34 @@ public final class Case extends EsqlScalarFunction {
         @Param(
             name = "trueValue",
             type = {
+                "aggregate_metric_double",
                 "boolean",
                 "cartesian_point",
                 "cartesian_shape",
                 "date",
                 "date_nanos",
+                "date_range",
                 "dense_vector",
                 "double",
+                "double_range",
+                "flattened",
                 "geo_point",
                 "geo_shape",
                 "geohash",
                 "geotile",
                 "geohex",
+                "histogram",
                 "integer",
                 "ip",
                 "keyword",
                 "long",
+                "tdigest",
                 "text",
                 "unsigned_long",
                 "version",
                 "exponential_histogram" },
-            description = "The value that’s returned when the corresponding condition is the first to evaluate to `true`. "
-                + "The default value is returned when no condition matches."
+            description = "The expression or value that’s returned when the corresponding condition is the first to evaluate to `true`. "
+                + "Can be a column reference or any other expression. The default value is returned when no condition matches."
         ) List<Expression> rest
     ) {
         super(source, Stream.concat(Stream.of(first), rest.stream()).toList());
@@ -213,15 +238,15 @@ public final class Case extends EsqlScalarFunction {
             dataType = value.dataType().noText();
             return TypeResolutions.isType(
                 value,
-                t -> t != AGGREGATE_METRIC_DOUBLE && t != TDIGEST && t != HISTOGRAM,
+                t -> true,
                 sourceText(),
                 TypeResolutions.ParamOrdinal.fromIndex(position),
-                originalWasNull ? NULL.typeName() : "any but aggregate_metric_double, histogram, or tdigest"
+                originalWasNull ? NULL.typeName() : "any type"
             );
         }
         return TypeResolutions.isType(
             value,
-            t -> t.noText() == dataType && t != AGGREGATE_METRIC_DOUBLE && t != TDIGEST && t != HISTOGRAM,
+            t -> t.noText() == dataType,
             sourceText(),
             TypeResolutions.ParamOrdinal.fromIndex(position),
             dataType.typeName()
@@ -249,24 +274,42 @@ public final class Case extends EsqlScalarFunction {
             if (condition.condition.foldable() == false) {
                 return false;
             }
-            if (Boolean.TRUE.equals(condition.condition.fold(FoldContext.small() /* TODO remove me - use literal true?*/))) {
-                /*
-                 * `fold` can make four things here:
-                 * 1. `TRUE`
-                 * 2. `FALSE`
-                 * 3. null
-                 * 4. A list with more than one `TRUE` or `FALSE` in it.
-                 *
-                 * In the first case, we're foldable if the condition is foldable.
-                 * The multivalued field will make a warning, but eventually
-                 * become null. And null will become false. So cases 2-4 are
-                 * the same. In those cases we are foldable only if the *rest*
-                 * of the condition is foldable.
-                 */
-                return condition.value.foldable();
+            /* Given the current condition is foldable,
+                if we have already folded the condition into a Literal
+                    If True, Case is foldable if the value is foldable
+                    If False, Case is foldable if the rest of the conditions are foldable
+                Otherwise
+                    if the value is foldable and the rest of the conditions are foldable, Case is foldable
+             */
+            if (condition.condition instanceof Literal literal) {
+                if (Boolean.TRUE.equals(literal.value())) {
+                    // The condition is literally TRUE, so only the matching value needs to be foldable.
+                    return condition.value.foldable();
+                } else {
+                    continue;
+                }
+            }
+            if (condition.value.foldable() == false) {
+                return false;
             }
         }
         return elseValue.foldable();
+    }
+
+    @Override
+    public Object fold(FoldContext ctx) {
+        DataType type = dataType();
+        if (type == DataType.DATE_PERIOD || type == DataType.TIME_DURATION) {
+            // These can't be managed by evaluators, we have to fold them manually.
+            // TODO manage warnings for MV condition (evaluators take care of that, here we don't have the components)
+            for (Condition condition : conditions) {
+                if (Boolean.TRUE.equals(condition.condition.fold(ctx))) {
+                    return condition.value.fold(ctx);
+                }
+            }
+            return elseValue.fold(ctx);
+        }
+        return super.fold(ctx);
     }
 
     /**
@@ -325,9 +368,26 @@ public final class Case extends EsqlScalarFunction {
     }
 
     private Expression finishPartialFold(List<Expression> newChildren) {
+        Expression result = innerFinishPartialFold(newChildren);
+        if (result.dataType().noText().equals(dataType()) == false) {
+            throw new IllegalStateException("partiallyFold produced type [" + result.dataType() + "] but expected [" + dataType() + "]");
+        }
+        return result;
+    }
+
+    private Expression innerFinishPartialFold(List<Expression> newChildren) {
         return switch (newChildren.size()) {
+            // CASE(false, a) -> NULL
             case 0 -> new Literal(source(), null, dataType());
-            case 1 -> newChildren.get(0);
+            // CASE(false, a, b) -> b, casting a NULL arm to dataType() so callers see KEYWORD, not NULL.
+            case 1 -> {
+                Expression child = newChildren.getFirst();
+                if (child.dataType() == NULL && dataType() != NULL) {
+                    yield new Literal(child.source(), null, dataType());
+                }
+                yield child;
+            }
+            // CASE(false, a, b, c, d) -> CASE(b, c, d)
             default -> replaceChildren(newChildren);
         };
     }
@@ -363,12 +423,7 @@ public final class Case extends EsqlScalarFunction {
                  * Rather than go into depth about this in the warning message,
                  * we just say "false".
                  */
-                Warnings.createWarningsTreatedAsFalse(
-                    driverContext.warningsMode(),
-                    conditionSource.source().getLineNumber(),
-                    conditionSource.source().getColumnNumber(),
-                    conditionSource.text()
-                ),
+                driverContext.createWarningsTreatedAsFalse(conditionSource),
                 condition.get(driverContext),
                 value.get(driverContext)
             );
@@ -380,11 +435,7 @@ public final class Case extends EsqlScalarFunction {
         }
     }
 
-    record ConditionEvaluator(
-        Warnings conditionWarnings,
-        EvalOperator.ExpressionEvaluator condition,
-        EvalOperator.ExpressionEvaluator value
-    ) implements Releasable {
+    record ConditionEvaluator(Warnings conditionWarnings, ExpressionEvaluator condition, ExpressionEvaluator value) implements Releasable {
 
         private static final long BASE_RAM_BYTES_USED = RamUsageEstimator.shallowSizeOfInstance(CaseLazyEvaluator.class);
 
@@ -440,8 +491,8 @@ public final class Case extends EsqlScalarFunction {
         BlockFactory blockFactory,
         ElementType resultType,
         List<ConditionEvaluator> conditions,
-        EvalOperator.ExpressionEvaluator elseVal
-    ) implements EvalOperator.ExpressionEvaluator {
+        ExpressionEvaluator elseVal
+    ) implements ExpressionEvaluator {
 
         private static final long BASE_RAM_BYTES_USED = RamUsageEstimator.shallowSizeOfInstance(CaseLazyEvaluator.class);
 
@@ -462,7 +513,9 @@ public final class Case extends EsqlScalarFunction {
                     int[] positions = new int[] { p };
                     Page limited = new Page(
                         1,
-                        IntStream.range(0, page.getBlockCount()).mapToObj(b -> page.getBlock(b).filter(positions)).toArray(Block[]::new)
+                        IntStream.range(0, page.getBlockCount())
+                            .mapToObj(b -> page.getBlock(b).filter(false, positions))
+                            .toArray(Block[]::new)
                     );
                     try (Releasable ignored = limited::releaseBlocks) {
                         for (ConditionEvaluator condition : conditions) {
@@ -543,8 +596,8 @@ public final class Case extends EsqlScalarFunction {
         ElementType resultType,
         BlockFactory blockFactory,
         ConditionEvaluator condition,
-        EvalOperator.ExpressionEvaluator elseVal
-    ) implements EvalOperator.ExpressionEvaluator {
+        ExpressionEvaluator elseVal
+    ) implements ExpressionEvaluator {
 
         private static final long BASE_RAM_BYTES_USED = RamUsageEstimator.shallowSizeOfInstance(CaseLazyEvaluator.class);
 
